[gd_scene load_steps=10 format=3 uid="uid://btyyj0u6xl3x2"]

[ext_resource type="Script" path="res://MainMenu/main_menu.gd" id="1_sdxab"]
[ext_resource type="Script" path="res://MainMenu/main_menu_continue.gd" id="2_6t311"]
[ext_resource type="FontFile" uid="uid://bhq5s425dflg4" path="res://Themes/Fonts/Freshman-POdx.ttf" id="2_7cvpg"]
[ext_resource type="Script" path="res://MainMenu/main_menu_content.gd" id="2_cfoiq"]
[ext_resource type="Texture2D" uid="uid://ct7jvd3fmexmt" path="res://pattern_0015.png" id="2_nj2io"]
[ext_resource type="Script" path="res://MainMenu/main_menu_new.gd" id="5_godv8"]
[ext_resource type="PackedScene" uid="uid://ciop6prkbkyqd" path="res://MainMenu/mm_save_summary_widget.tscn" id="5_kclqb"]
[ext_resource type="Script" path="res://MainMenu/main_menu_load.gd" id="7_vfkji"]

[sub_resource type="ButtonGroup" id="ButtonGroup_lkgum"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_sdxab")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.0980392)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nj2io")
stretch_mode = 1

[node name="Title" type="Label" parent="."]
custom_minimum_size = Vector2(0, 128)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_7cvpg")
theme_override_font_sizes/font_size = 60
text = "College Basketball Coach 2025"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 96)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -224.0
offset_right = -64.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme_override_constants/separation = 32
alignment = 1

[node name="Continue" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_lkgum")
text = "Continue Last Save"

[node name="New" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_lkgum")
text = "New Game"

[node name="Load" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_lkgum")
text = "Load Game"

[node name="Create" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create"

[node name="Options" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = SubResource("ButtonGroup_lkgum")
text = "Options"

[node name="Exit" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Exit to Desktop"

[node name="Content" type="Panel" parent="."]
custom_minimum_size = Vector2(1024, 512)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -256.0
offset_right = 384.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Control" parent="Content"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_6t311")

[node name="Header" type="Label" parent="Content/Continue"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_type_variation = &"HeaderLabel"
text = "Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MMSaveSummaryWidget" parent="Content/Continue" instance=ExtResource("5_kclqb")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -96.0
offset_right = 192.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="New" type="Control" parent="Content"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_godv8")

[node name="World" type="Control" parent="Content/New"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Content/New/World"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Label" parent="Content/New/World/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Setup New Game World"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content/New/World/VBoxContainer"]
layout_mode = 2

[node name="Content" type="HBoxContainer" parent="Content/New/World/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="World" type="VBoxContainer" parent="Content/New/World/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Content/New/World/VBoxContainer/Content/World"]
layout_mode = 2
text = "TODO: Option to upload your own world data files"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="Content/New/World/VBoxContainer/Content"]
layout_mode = 2

[node name="Slot" type="VBoxContainer" parent="Content/New/World/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Content/New/World/VBoxContainer/Content/Slot"]
layout_mode = 2
text = "Save Slot Name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Content/New/World/VBoxContainer/Content/Slot"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "new_career_datestr"

[node name="HSeparator2" type="HSeparator" parent="Content/New/World/VBoxContainer"]
layout_mode = 2

[node name="Navigation" type="HBoxContainer" parent="Content/New/World/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Back" type="Button" parent="Content/New/World/VBoxContainer/Navigation"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "< Back"

[node name="Spacer" type="Control" parent="Content/New/World/VBoxContainer/Navigation"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="Button" parent="Content/New/World/VBoxContainer/Navigation"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Next >"

[node name="Character" type="Control" parent="Content/New"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Content/New/Character"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Label" parent="Content/New/Character/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Create Coach"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content/New/Character/VBoxContainer"]
layout_mode = 2

[node name="Content" type="HBoxContainer" parent="Content/New/Character/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Character" type="VBoxContainer" parent="Content/New/Character/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Content/New/Character/VBoxContainer/Content/Character"]
layout_mode = 2
text = "Biography"

[node name="FirstName" type="HBoxContainer" parent="Content/New/Character/VBoxContainer/Content/Character"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label" type="Label" parent="Content/New/Character/VBoxContainer/Content/Character/FirstName"]
layout_mode = 2
size_flags_horizontal = 3
text = "First Name"
horizontal_alignment = 2

[node name="LineEdit" type="LineEdit" parent="Content/New/Character/VBoxContainer/Content/Character/FirstName"]
layout_mode = 2
size_flags_horizontal = 3
text = "John"

[node name="LastName" type="HBoxContainer" parent="Content/New/Character/VBoxContainer/Content/Character"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label" type="Label" parent="Content/New/Character/VBoxContainer/Content/Character/LastName"]
layout_mode = 2
size_flags_horizontal = 3
text = "Last Name"
horizontal_alignment = 2

[node name="LineEdit" type="LineEdit" parent="Content/New/Character/VBoxContainer/Content/Character/LastName"]
layout_mode = 2
size_flags_horizontal = 3
text = "Smith"

[node name="Birth" type="HBoxContainer" parent="Content/New/Character/VBoxContainer/Content/Character"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label" type="Label" parent="Content/New/Character/VBoxContainer/Content/Character/Birth"]
layout_mode = 2
size_flags_horizontal = 3
text = "Year of Birth"
horizontal_alignment = 2

[node name="OptionButton" type="OptionButton" parent="Content/New/Character/VBoxContainer/Content/Character/Birth"]
layout_mode = 2
size_flags_horizontal = 2

[node name="Hometown" type="HBoxContainer" parent="Content/New/Character/VBoxContainer/Content/Character"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label" type="Label" parent="Content/New/Character/VBoxContainer/Content/Character/Hometown"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hometown"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Content/New/Character/VBoxContainer/Content/Character/Hometown"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 32

[node name="State" type="OptionButton" parent="Content/New/Character/VBoxContainer/Content/Character/Hometown/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="City" type="OptionButton" parent="Content/New/Character/VBoxContainer/Content/Character/Hometown/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AlmaMater" type="HBoxContainer" parent="Content/New/Character/VBoxContainer/Content/Character"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label" type="Label" parent="Content/New/Character/VBoxContainer/Content/Character/AlmaMater"]
layout_mode = 2
size_flags_horizontal = 3
text = "Alma Mater"
horizontal_alignment = 2

[node name="OptionButton" type="OptionButton" parent="Content/New/Character/VBoxContainer/Content/Character/AlmaMater"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="Content/New/Character/VBoxContainer/Content"]
layout_mode = 2

[node name="Coach" type="VBoxContainer" parent="Content/New/Character/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tactical" type="Label" parent="Content/New/Character/VBoxContainer/Content/Coach"]
layout_mode = 2
text = "Tactical"

[node name="Offense" type="HBoxContainer" parent="Content/New/Character/VBoxContainer/Content/Coach"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Content/New/Character/VBoxContainer/Content/Coach/Offense"]
layout_mode = 2
size_flags_horizontal = 4
text = "Offense"
horizontal_alignment = 2

[node name="SpinBox" type="SpinBox" parent="Content/New/Character/VBoxContainer/Content/Coach/Offense"]
layout_mode = 2
size_flags_horizontal = 4
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="Defense" type="HBoxContainer" parent="Content/New/Character/VBoxContainer/Content/Coach"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Content/New/Character/VBoxContainer/Content/Coach/Defense"]
layout_mode = 2
size_flags_horizontal = 4
text = "Defense"
horizontal_alignment = 2

[node name="SpinBox" type="SpinBox" parent="Content/New/Character/VBoxContainer/Content/Coach/Defense"]
layout_mode = 2
size_flags_horizontal = 4
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="HSeparator" type="HSeparator" parent="Content/New/Character/VBoxContainer/Content/Coach"]
layout_mode = 2

[node name="Training" type="Label" parent="Content/New/Character/VBoxContainer/Content/Coach"]
layout_mode = 2
text = "Training
"

[node name="Mental" type="HBoxContainer" parent="Content/New/Character/VBoxContainer/Content/Coach"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Content/New/Character/VBoxContainer/Content/Coach/Mental"]
layout_mode = 2
size_flags_horizontal = 4
text = "Mental"
horizontal_alignment = 2

[node name="SpinBox" type="SpinBox" parent="Content/New/Character/VBoxContainer/Content/Coach/Mental"]
layout_mode = 2
size_flags_horizontal = 4
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="Physical" type="HBoxContainer" parent="Content/New/Character/VBoxContainer/Content/Coach"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Content/New/Character/VBoxContainer/Content/Coach/Physical"]
layout_mode = 2
size_flags_horizontal = 4
text = "Physical"
horizontal_alignment = 2

[node name="SpinBox" type="SpinBox" parent="Content/New/Character/VBoxContainer/Content/Coach/Physical"]
layout_mode = 2
size_flags_horizontal = 4
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="Technical" type="HBoxContainer" parent="Content/New/Character/VBoxContainer/Content/Coach"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Content/New/Character/VBoxContainer/Content/Coach/Technical"]
layout_mode = 2
size_flags_horizontal = 4
text = "Technical"
horizontal_alignment = 2

[node name="SpinBox" type="SpinBox" parent="Content/New/Character/VBoxContainer/Content/Coach/Technical"]
layout_mode = 2
size_flags_horizontal = 4
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="HSeparator2" type="HSeparator" parent="Content/New/Character/VBoxContainer/Content/Coach"]
layout_mode = 2

[node name="Insight" type="Label" parent="Content/New/Character/VBoxContainer/Content/Coach"]
layout_mode = 2
text = "Insight"

[node name="Evaluation" type="HBoxContainer" parent="Content/New/Character/VBoxContainer/Content/Coach"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Content/New/Character/VBoxContainer/Content/Coach/Evaluation"]
layout_mode = 2
size_flags_horizontal = 4
text = "Evaluation"
horizontal_alignment = 2

[node name="SpinBox" type="SpinBox" parent="Content/New/Character/VBoxContainer/Content/Coach/Evaluation"]
layout_mode = 2
size_flags_horizontal = 4
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="Scouting" type="HBoxContainer" parent="Content/New/Character/VBoxContainer/Content/Coach"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Content/New/Character/VBoxContainer/Content/Coach/Scouting"]
layout_mode = 2
size_flags_horizontal = 4
text = "Scouting"
horizontal_alignment = 2

[node name="SpinBox" type="SpinBox" parent="Content/New/Character/VBoxContainer/Content/Coach/Scouting"]
layout_mode = 2
size_flags_horizontal = 4
min_value = 1.0
max_value = 20.0
value = 1.0

[node name="HSeparator2" type="HSeparator" parent="Content/New/Character/VBoxContainer"]
layout_mode = 2

[node name="Navigation" type="HBoxContainer" parent="Content/New/Character/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Back" type="Button" parent="Content/New/Character/VBoxContainer/Navigation"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "< Back"

[node name="Spacer" type="Control" parent="Content/New/Character/VBoxContainer/Navigation"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="Button" parent="Content/New/Character/VBoxContainer/Navigation"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Next >"

[node name="Finalize" type="Control" parent="Content/New"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Content/New/Finalize"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Label" parent="Content/New/Finalize/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Start New Career"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content/New/Finalize/VBoxContainer"]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="Content/New/Finalize/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Content/New/Finalize/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 4
text = "Starting School:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SchoolSelect" type="OptionButton" parent="Content/New/Finalize/VBoxContainer/Content"]
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="Spacer" type="Control" parent="Content/New/Finalize/VBoxContainer/Content"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="StartGame" type="Button" parent="Content/New/Finalize/VBoxContainer/Content"]
custom_minimum_size = Vector2(320, 80)
layout_mode = 2
size_flags_horizontal = 4
text = "Start Career"

[node name="HSeparator2" type="HSeparator" parent="Content/New/Finalize/VBoxContainer"]
layout_mode = 2

[node name="Navigation" type="HBoxContainer" parent="Content/New/Finalize/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Back" type="Button" parent="Content/New/Finalize/VBoxContainer/Navigation"]
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "< Back"

[node name="Spacer" type="Control" parent="Content/New/Finalize/VBoxContainer/Navigation"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="Button" parent="Content/New/Finalize/VBoxContainer/Navigation"]
visible = false
custom_minimum_size = Vector2(128, 32)
layout_mode = 2
text = "Next >"

[node name="Load" type="Control" parent="Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_vfkji")

[node name="Header" type="Label" parent="Content/Load"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_type_variation = &"HeaderLabel"
text = "Load Career"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Content/Load"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 64.0
offset_right = -32.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Content/Load/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="Options" type="Control" parent="Content"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_cfoiq")

[connection signal="pressed" from="Buttons/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Buttons/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="Buttons/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="load_continue" from="Content/Continue" to="." method="_on_continue_load_continue"]
[connection signal="load_pressed" from="Content/Continue/MMSaveSummaryWidget" to="Content/Continue" method="_on_load_pressed"]
[connection signal="new_start" from="Content/New" to="." method="_on_new_start"]
[connection signal="pressed" from="Content/New/World/VBoxContainer/Navigation/Next" to="Content/New" method="_on_next_pressed"]
[connection signal="item_selected" from="Content/New/Character/VBoxContainer/Content/Character/Hometown/HBoxContainer/State" to="Content/New" method="_on_state_item_selected"]
[connection signal="pressed" from="Content/New/Character/VBoxContainer/Navigation/Next" to="Content/New" method="_on_next_pressed"]
[connection signal="pressed" from="Content/New/Finalize/VBoxContainer/Content/StartGame" to="Content/New" method="_on_start_game_pressed"]
[connection signal="pressed" from="Content/New/Finalize/VBoxContainer/Navigation/Next" to="Content/New" method="_on_next_pressed"]
[connection signal="load_load" from="Content/Load" to="." method="_on_load_load_load"]
